--- a/AR/index.html
+++ b/AR/index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bacheca Digitale AR</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script> <!-- CDN di Three.js -->
+  <script src="script.js" defer></script> <!-- Collega lo script principale -->
+  <link rel="stylesheet" href="style.css"> <!-- Stile opzionale -->
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+  </style>
+</head>
+<body>
+  <h1>Bacheca Digitale AR</h1>
+  <!-- Il contenuto AR verrà caricato tramite Three.js -->
+</body>
+</html>
 
