--- a/AR/index.html
+++ b/AR/index.html
@@ -4,17 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bacheca Digitale AR</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script> <!-- CDN di Three.js -->
-  <script src="script.js" defer></script> <!-- Collega lo script principale -->
-  <link rel="stylesheet" href="style.css"> <!-- Stile opzionale -->
-  <style>
-    body { margin: 0; overflow: hidden; }
-    canvas { display: block; }
-  </style>
+  <!-- Inclusione di Three.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
+  <!-- Script personalizzato -->
+  <script src="script.js" defer></script>
+  <!-- Stile CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Titolo principale -->
   <h1>Bacheca Digitale AR</h1>
-  <!-- Il contenuto AR verrà caricato tramite Three.js -->
+  
+  <!-- Sezioni di contenuto (opzionale, per migliorare la pagina) -->
+  <div class="section">
+    <h2 class="section-title">Avvisi in evidenza</h2>
+    <div class="section-content">
+      <p>- Assemblea condominiale: 15 gennaio alle 18:30</p>
+      <p>- Manutenzione ascensore: 20 gennaio dalle 9:00 alle 13:00</p>
+    </div>
+  </div>
+
+  <div class="section">
+    <h2 class="section-title">Documenti</h2>
+    <div class="section-content">
+      <p><a href="https://example.com/documento1.pdf" target="_blank">Regolamento Condominiale</a></p>
+      <p><a href="https://example.com/documento2.pdf" target="_blank">Verbale dell'ultima assemblea</a></p>
+    </div>
+  </div>
+
+  <!-- Canvas per il rendering AR -->
+  <canvas id="ar-canvas"></canvas>
 </body>
 </html>
+
 
