--- a/AR/index.html
+++ b/AR/index.html
@@ -15,7 +15,7 @@
   <!-- Titolo principale -->
   <h1>Bacheca Digitale AR</h1>
   
-  <!-- Sezioni di contenuto (opzionale, per migliorare la pagina) -->
+  <!-- Sezioni di contenuto -->
   <div class="section">
     <h2 class="section-title">Avvisi in evidenza</h2>
     <div class="section-content">
@@ -34,7 +34,7 @@
 
   <!-- Canvas per il rendering AR -->
   <canvas id="ar-canvas"></canvas>
-</body>
-</html>
 
-
+  <!-- Debugging console -->
+  <div class="debug">
+    <p id="debug-message">In a
