--- a/AR/index.html
+++ b/AR/index.html
@@ -8,33 +8,26 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
   <!-- Script personalizzato -->
   <script src="script.js" defer></script>
-  <!-- Stile CSS -->
+  <!-- Collegamento al file CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Titolo principale -->
   <h1>Bacheca Digitale AR</h1>
-  
-  <!-- Sezioni di contenuto -->
-  <div class="section">
-    <h2 class="section-title">Avvisi in evidenza</h2>
-    <div class="section-content">
-      <p>- Assemblea condominiale: 15 gennaio alle 18:30</p>
-      <p>- Manutenzione ascensore: 20 gennaio dalle 9:00 alle 13:00</p>
+
+  <!-- Sezione interattiva -->
+  <div class="interface">
+    <div class="qr-container">
+      <img src="assets/qr-code.png" alt="QR Code" class="qr-code">
+      <p>Scansiona il QR per accedere alla bacheca interattiva!</p>
+    </div>
+    <div class="buttons">
+      <button onclick="openDocument('https://example.com/documento1.pdf')">Regolamento Condominiale</button>
+      <button onclick="openDocument('https://example.com/documento2.pdf')">Verbale Assemblea</button>
     </div>
   </div>
 
-  <div class="section">
-    <h2 class="section-title">Documenti</h2>
-    <div class="section-content">
-      <p><a href="https://example.com/documento1.pdf" target="_blank">Regolamento Condominiale</a></p>
-      <p><a href="https://example.com/documento2.pdf" target="_blank">Verbale dell'ultima assemblea</a></p>
-    </div>
-  </div>
-
-  <!-- Canvas per il rendering AR -->
+  <!-- Canvas per l'elemento AR -->
   <canvas id="ar-canvas"></canvas>
-
-  <!-- Debugging console -->
-  <div class="debug">
-    <p id="debug-message">In a
+</body>
+</html>
