--- a/AR/index.html
+++ b/AR/index.html
@@ -15,16 +15,10 @@
   <!-- Titolo principale -->
   <h1>Bacheca Digitale AR</h1>
 
-  <!-- Sezione interattiva -->
-  <div class="interface">
-    <div class="qr-container">
-      <img src="assets/qr-code.png" alt="QR Code" class="qr-code">
-      <p>Scansiona il QR per accedere alla bacheca interattiva!</p>
-    </div>
-    <div class="buttons">
-      <button onclick="openDocument('https://example.com/documento1.pdf')">Regolamento Condominiale</button>
-      <button onclick="openDocument('https://example.com/documento2.pdf')">Verbale Assemblea</button>
-    </div>
+  <!-- Sezione del QR Code -->
+  <div class="qr-container">
+    <img src="assets/qr-code.png" alt="QR Code" class="qr-code">
+    <p>Scansiona il QR per accedere alla bacheca interattiva!</p>
   </div>
 
   <!-- Canvas per l'elemento AR -->
