--- a/AR/index.html
+++ b/AR/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bacheca Digitale AR</title>
-  <!-- Inclusione di Three.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r152/three.min.js"></script>
+
+  <!-- Inclusione di Three.js da un CDN alternativo -->
+  <script src="https://unpkg.com/three@0.152.0/build/three.min.js"></script>
+
   <!-- Collegamento al file CSS -->
   <link rel="stylesheet" href="style.css">
+
   <!-- Script personalizzato -->
   <script src="script.js" defer></script>
 </head>
