--- a/AR/index.html
+++ b/AR/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bacheca Digitale AR</title>
-
-  <!-- Inclusione di Three.js -->
-  <script src="https://unpkg.com/three@0.152.0/build/three.min.js"></script>
-
-  <!-- Collegamento al file CSS -->
-  <link rel="stylesheet" href="style.css">
-
-  <!-- Script personalizzato -->
-  <script src="script.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ItriaSAC AR</title>
+    <script src="https://cdn.jsdelivr.net/npm/ar.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <h1>Bacheca Digitale Interattiva</h1>
-
-  <div class="container">
-    <!-- Feed della fotocamera -->
-    <video id="camera-feed" autoplay playsinline muted></video>
-
-    <!-- Canvas per gli oggetti AR -->
-    <canvas id="ar-canvas"></canvas>
-
-    <!-- Pulsanti per documenti -->
-    <div class="buttons">
-      <button onclick="openDocument('https://example.com/documento1.pdf')">Regolamento Condominiale</button>
-      <button onclick="openDocument('https://example.com/documento2.pdf')">Verbale Assemblea</button>
-    </div>
-  </div>
+<body style="margin: 0; overflow: hidden;">
+    <a-scene embedded arjs>
+        <!-- Marker QR Code -->
+        <a-marker preset="custom" type="pattern" url="marker.patt">
+            <!-- Cerchio centrale -->
+            <a-entity geometry="primitive: circle; radius: 1" 
+                      material="color: olive; opacity: 0.8" 
+                      position="0 0 0">
+                <a-text value="ItriaSAC" 
+                        align="center" 
+                        color="white" 
+                        position="0 0.1 0.1" 
+                        scale="2 2 2"></a-text>
+            </a-entity>
+            <!-- Cerchi orbitanti -->
+            <a-entity id="orbit" position="0 0 0">
+                <a-entity geometry="primitive: sphere; radius: 0.3" 
+                          material="color: white" 
+                          position="1 0 0"></a-entity>
+                <a-entity geometry="primitive: sphere; radius: 0.3" 
+                          material="color: white" 
+                          position="-1 0 0"></a-entity>
+            </a-entity>
+        </a-marker>
+        <!-- Camera AR -->
+        <a-entity camera></a-entity>
+    </a-scene>
+    <script src="script.js"></script>
 </body>
 </html>
