--- a/AR/index.html
+++ b/AR/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ItriaSAC AR</title>
+    <!-- Carica Three.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <!-- Carica AR.js -->
     <script src="https://cdn.jsdelivr.net/npm/ar.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body style="margin: 0; overflow: hidden;">
     <a-scene embedded arjs>
         <!-- Marker QR Code -->
-        <a-marker preset="custom" type="pattern" url="marker.patt">
+        <a-marker preset="hiro">
             <!-- Cerchio centrale -->
             <a-entity geometry="primitive: circle; radius: 1" 
                       material="color: olive; opacity: 0.8" 
@@ -20,15 +23,6 @@
                         color="white" 
                         position="0 0.1 0.1" 
                         scale="2 2 2"></a-text>
-            </a-entity>
-            <!-- Cerchi orbitanti -->
-            <a-entity id="orbit" position="0 0 0">
-                <a-entity geometry="primitive: sphere; radius: 0.3" 
-                          material="color: white" 
-                          position="1 0 0"></a-entity>
-                <a-entity geometry="primitive: sphere; radius: 0.3" 
-                          material="color: white" 
-                          position="-1 0 0"></a-entity>
             </a-entity>
         </a-marker>
         <!-- Camera AR -->
