--- a/AR/index.html
+++ b/AR/index.html
@@ -4,12 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ItriaSAC AR</title>
-    <!-- Carica A-Frame --> 
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <!-- Carica Three.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <!-- Carica AR.js -->
-    <script src="https://cdn.jsdelivr.net/npm/ar.js"></script>
+    <!-- Carica A-Frame con supporto AR -->
+    <script src="https://cdn.jsdelivr.net/npm/ar.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body style="margin: 0; overflow: hidden;">
