--- a/AR/index.html
+++ b/AR/index.html
@@ -6,13 +6,12 @@
     <title>ItriaSAC AR</title>
     <!-- A-Frame con supporto AR.js -->
     <script src="https://cdn.jsdelivr.net/npm/ar.js@3.3.2/aframe/build/aframe-ar.min.js"></script>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body style="margin: 0; overflow: hidden;">
     <h1 style="text-align: center; color: black; margin: 10px 0;">Debug ItriaSAC AR</h1>
     <a-scene embedded arjs>
-        <!-- Marker Hiro per debug -->
-        <a-marker preset="hiro">
+        <!-- Usa il tuo marker personalizzato -->
+        <a-marker preset="custom" type="pattern" url="marker.patt">
             <!-- Cerchio centrale -->
             <a-entity geometry="primitive: circle; radius: 1" 
                       material="color: olive; opacity: 0.8" 
